some small refactoring, just moving classes